--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/madushan-sooriyarathne/venus-glory#readme",
   "dependencies": {
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "^11.1.2",
     "react": "^17.0.2",
