--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^7.1.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
